[tool.poetry]
name = "MonkeeBot"
version = "1.1.3"
description = "A quick Discord bot for fun!"
authors = ["Jordan Rudman <jrud25@vt.edu>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
replit = "^3.2.4"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"